test/tests/compiler/6_statements_and_conditional_expressions/valid/if_nested_4.plx



pub fn main(none) i32 {
    a: i32 = 0
    if not a {
        if 3 / 4 {
            a = 3
        }
        else {
            a = 8 / 2
        }
    }

    return a
}
