test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/goto_variable.plx
pub fn main(none) i32 {
    a: i32;
    jump a
    return 0
}
